# Weekly-Tasks

Week1_C++/: CMakeLists.txt
Week1_C++/Solution/: CMakeLists.txt  func.c  func.h  main.c
Week1_C++/Tasks/: CMakeLists.txt
Week1_C++/Tasks/libs/gtest/include/: gtest.h
Week1_C++/Tasks/libs/gtest/include/internal/: gtest-port.h
Week1_C++/Tasks/src/: tests.cpp
